# bioagent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: graph.py  prompts.py  tools.py
api/: main.py
api/routers/: agent.py
dashboard/: app.py
tests/: conftest.py  test_api.py  test_graph.py  test_tools.py
