[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioagent"
version = "1.0.0"
description = "Autonomous bioinformatics AI analyst powered by LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "anthropic>=0.40.0",
    "biopython>=1.84",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "streamlit>=1.35",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "nest-asyncio>=1.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "api*", "dashboard*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402"]
